Fix header with on smaller screens

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -77,6 +77,7 @@ header {
   border: 1px dashed rgba(var(--color-primary-r), var(--color-primary-g), var(--color-primary-b), 1);
   border-top: none;
   border-radius: 0 0 var(--border-radius) var(--border-radius);
+  max-width: 100%;
 
   // We can't use CSS variables in media queries, so this is done manually.
   // It's oriented at the width of the nav.
